# rtoml

./: pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
