[metadata]
summary = A better TOML library for python implemented in rust.
long_description = file: README.md
long_description_content_type = text/markdown
author = Samuel Colvin
author_email = s@muelcolvin.com
url = https://github.com/samuelcolvin/rtoml
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    Environment :: Console
    Environment :: MacOS X
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet

[options]
python_requires = >=3.6
packages = rtoml
zip_safe = False

[options.package_data]
rtoml = py.typed

[tool:pytest]
testpaths = tests
filterwarnings = error

[flake8]
max-line-length = 120
max-complexity = 14
inline-quotes = '
multiline-quotes = """
ignore = E203, W503

[coverage:run]
branch = True

[coverage:report]
precision = 2
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if TYPE_CHECKING:
    @overload

[isort]
line_length=120
known_first_party=rtoml
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
skip=tests/toml_test.py

[mypy]
follow_imports = normal
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
disallow_any_generics = True
check_untyped_defs = True
no_implicit_reexport = True
disallow_untyped_defs = True
